log/build_2026-03-03_15-42-12/buoy_control/stderr.log
  File "/home/selqie/buoyancy/install/buoy_control/lib/python3.12/site-packages/buoy_control/timer_control.py", line 71
    self.motion_state(self, msg:MotorState) 
                               ^
SyntaxError: invalid syntax

